[package]
name = "enigma_SD"
version = "0.1.0"
edition = "2024"

[dependencies]
bytecheck = "0.8.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0"

[profile.release]
opt-level = "z"      # Оптимизация для минимального размера бинарника
lto = "fat"           # Link Time Optimization для дополнительного уменьшения размера
codegen-units = 1    # Меньше параллелизма, зато лучше оптимизация
strip = "symbols"  # Убираем отладочную информацию
debug = false
panic = "abort"
rpath = false